# google-custom-search-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml
charts/google-custom-search-mcp/: Chart.yaml  values.yaml
charts/google-custom-search-mcp/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
tests/: __init__.py  conftest.py  test_server.py
