[project]
name = "google-custom-search-mcp"
version = "0.1.0"
description = "Async Python MCP server for Google Custom Search"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Franz Bettag", email = "your.email@example.com"}
]
dependencies = [
    "fastmcp>=1.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "C", "N", "UP", "YTT"]
ignore = ["E501"]
per-file-ignores = { "tests/**/*.py" = ["S101"] }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.black]
line-length = 88
target-version = ['py313']

[project.scripts]
google-custom-search-mcp = "server:main"